<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#c4c66c"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.pdmm_luismonge.adivinador_luismonge.MainActivity">


    <TextView
        android:text="@string/adivinador_de_numeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="50dp"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/introduce_usuario"
        android:layout_marginBottom="25dp"
        android:id="@+id/edt_user" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:id="@+id/spiner_rango" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:id="@+id/spiner_dificultad" />

    <Button
        android:text="@string/iniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="jugar"
        android:background="#e45626"
        android:textColor="#fff"
        android:layout_marginBottom="25dp"
        android:id="@+id/btn_iniciar" />

    <TextView
        android:text="@string/comojugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />


</LinearLayout>
