<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_jugar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#c4c66c"
    tools:context="com.example.pdmm_luismonge.adivinador_luismonge.JugarActivity">


    <EditText
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:inputType="number"
        android:ems="4"
        android:id="@+id/edt_num"
        android:textSize="25sp"
        android:layout_marginTop="135dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/nueva_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_nuevaPartida"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/edt_num"
        android:layout_alignBottom="@+id/edt_num"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_partidas"
        android:textSize="35sp"
        android:layout_marginEnd="67dp"
        android:layout_below="@+id/edt_num"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/partidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/edt_num"
        android:layout_alignBottom="@+id/edt_num"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_puntos"
        android:textSize="35sp"
        android:layout_marginStart="23dp"
        android:layout_alignBottom="@+id/tv_partidas"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="12dp" />

    <Button
        android:text="@string/comprobar"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/btn_comprobar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <Button
        android:text="Info Jugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_infoJugador"
        android:layout_above="@+id/btn_nuevaPartida"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
